# okta-signin-widget-apps

./: .gitignore  LICENSE  Makefile  README.md  index.html  login.html  main.js  todo.org
consume-as-npm-module/: package.json  webpack.config.js
consume-as-npm-module/public/: index.html
consume-as-npm-module/src/: index.js  test.js
debug-customer-issue/: index.html  package.json
debug-customer-issue/src/: customer-main.js  form-submit.js
elm-okta-idp/: .eslintrc.json  README.html  README.md  README.org  gulpfile.js  package.json  webpack.config.js
elm-okta-idp/hello-world/: README.org  main.elm
elm-okta-idp/src/: Main.elm  elm-main.elm  index.html  init.js  main.js
elm-okta-idp/src-1/: elm-main.elm  index.html
elm-okta-idp/src-2/: elm-main.elm  init.js
global-cdn/: README.md  dev-s3-lambda.html  dev-s3.html  global-cdn.html  global-trex.html  index.html  local.html  main.js  ok1.html  package.json  test-webauthn.js
haskell-scotty/: LICENSE  Makefile  README.org  haskell-scotty.cabal
haskell-scotty/app/: Main.hs  Sessions.hs  config.sample.json
haskell-scotty/public/js/: login.js
haskell-scotty/src/: Config.hs  Lib.hs  Types.hs
haskell-scotty/test/: Spec.hs
jquery/: Makefile  api.js  common.js  index.html  login.html  login.js  main.js
jquery-okta-idp/: index.html  package.json  readme.md
jquery-okta-idp/js/: main.js  variables.js
jquery-okta-session/: Makefile  index.html  readme.md
jquery-okta-session/js/: variables.js
jquery-plugin/: index.html
jquery-plugin-okta-session/js/: jquery-okta-signin-widget.js
jquery-plugin/js/: jquery-okta-signin-widget.js
jquery/js/: api.js  main.js  variables.js
node-express-okta-idp/: .eslintrc.json  README.md  app.js  package.json
node-express-okta-idp/routes/: api.js  config-sample.json  (+1 more)
react-okta-idp/: package.json
(+11 files in other folders)
